[project]
name = "pythonhomework"
version = "0.1.0"
description = ""
authors = [
    {name = "Игорь",email = "Zabashtaigor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = "venv", ".tast"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
multi_line_output = 1
line_length = 119
force_single_line = true
